# tide-static-files

./: Cargo.toml  README.md  rust-toolchain
examples/: basic.rs
src/: file_request.rs  file_stream.rs  lib.rs  utils.rs
