[package]
name = "tide-static-files"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[dependencies]
http = "0.1.17"
http-service = "0.2.0"
tide = "0.2.0"
futures-preview = "0.3.0-alpha.16"
log = "0.4.6"
lazy_static = "1.3.0"
mime = "0.3.13"
failure = "0.1.5"
bytes = "0.4.12"
num-traits = "0.2.8"

[dev-dependencies]

