[package]
name = "tide-static-files"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[dependencies]
http = "0.1.16"
http-service = "*"
regex = "1.1.2"
tide = "^0.6"
futures = "^0.3"
async-std = "*"
log = "0.4.6"

[dev-dependencies]
tokio = "0.1.17"
tokio-threadpool = "0.1.12"
tempfile = "3.0.7"
