[package]
name = "tide-static-files"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[dependencies]
http = "0.1.16"
http-service = "*"
regex = "1.1.2"
tide = { version = "^0.6", default-features = false }
futures = "^0.3"
async-std = "*"
log = "0.4.6"
mime_guess = "^2.0"

[dev-dependencies]
tempfile = "3.0.7"
